# AIStudio

./: .dockerignore  .env.disabled  .env.docker  .env.example  .eslintrc.json  .gitignore  .mcp.json.backup  .prettierignore  AGENTS.md  AISTUDIO_WORKFLOW_DESIGN.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_VALIDATION_REPORT.md  BACKGROUND_WORKERS_IMPLEMENTATION.md  BACKGROUND_WORKERS_STATUS.md  CADDY_UPDATE_SUMMARY.md  CLAUDE.md  CODEBASE_ARCHITECTURE.md  CODE_QUALITY_DASHBOARD_STATUS.md  COVERAGE_REPORT.md  COVERAGE_SYSTEM_FIX.md  CRITICAL_BUG_FIX_ST45.md  Caddyfile  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PHASE_SUMMARY.md  DESIGNER_ANALYSIS_ST64.md  DESIGNER_COMPONENT_ADDITION.md  DNS_UPDATE_GUIDE.md  DOCKER_MANAGEMENT.md  DUAL_DOMAIN_SETUP.md  EPIC14_TEST_REPORT.md  EPIC_PLANNING_VIEW_DESIGN.md  FRONTEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE_DIAGRAMS.md  FRONTEND_ARCHITECTURE_INDEX.md  FRONTEND_ARCHITECTURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAYERS_COMPONENTS_ANALYSIS.md  OUTSTANDING_ITEMS.md  PM_ESTIMATION_WORKFLOW.md  QA_AUTOMATION_COMPONENT_OUTPUT.md  (+102 more)
.claude/: .agent-active.json  .workflow-enforcement.json  ST-239-architecture-review.md  config.json  context7.mcpjson  pending-questions.json  running-workflows.json  running-workflows.json.tmp
backend/: .env.disabled  .env.docker  .env.example  API_TESTING_GUIDE.md  Dockerfile  Dockerfile.prod  Dockerfile.test  QA_VALIDATION_ST77.md  ST-64-BACKEND-IMPLEMENTATION-SUMMARY.md  (+34 more)
laptop-agent/src-tauri/: Cargo.toml  tauri.conf.json
laptop-agent/src-tauri/capabilities/: default.json
laptop-agent/src-tauri/src/: main.rs
(+2430 files in other folders)
